<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saddlement.MainActivity"
    tools:ignore="MergeRootFrame"
    android:background="#EFFBFB">

   

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/saddlementklein" 
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_centerVertical="true"
        android:text="@string/Username" 
		android:textAppearance="?android:attr/textAppearanceMedium" 
        />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/Password" 
        android:textAppearance="?android:attr/textAppearanceMedium" 
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        
        
      android:layout_alignBottom="@+id/textView2"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView2"
      android:ems="10"
         />

   
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView3"
      android:layout_alignLeft="@+id/editText1"
      android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/login_button" 
        android:textAppearance="?android:attr/textAppearanceMedium" 
        
        />


</RelativeLayout>

