<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true" 
>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CEECF5"
    android:orientation="vertical" 
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp"
        >
        
      <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="center"
            android:text="@string/pakketGegevens"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
             />  

      

       
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:background="@drawable/borders"
             >

            <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:text="@string/Afzender"
            android:textIsSelectable="false"
            android:textSize="16sp" 
            />  	

        </TableRow>
  		<TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="Bol.com"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textSize="14sp" />  
            
            <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="Postbbus 10004"
            android:textIsSelectable="false"
            android:textSize="14sp" /> 
            
            <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="5140DA WAALWIJK"
            android:textIsSelectable="false"
            android:textSize="14sp" />             
       
   		<TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:background="@drawable/borders"
             >

            <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:text="@string/Bezorgadres"
            android:textIsSelectable="false"
            android:textSize="16sp" 
            />  	

        </TableRow>
  		<TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="Satish Biharie"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textSize="14sp" />  
            
            <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="D.C.MEESSTRAAT 6"
            android:textIsSelectable="false"
            android:textSize="14sp" /> 
            
            <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="3201RA SPIJKENISSE"
            android:textIsSelectable="false"
            android:textSize="14sp" />  
            

            
            <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:background="@drawable/borders"
             >

            <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:text="@string/Bezorgdatum"
            android:textIsSelectable="false"
            android:textSize="16sp" 
            />  	

        </TableRow>
  		<TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="wo 25 jun 2014"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textSize="14sp" />  
            
            <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="11:00-13:00"
            android:textIsSelectable="false"
            android:textSize="14sp" /> 

            <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:background="@drawable/borders"
             >

            <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:text="@string/Statuss"
            android:textIsSelectable="false"
            android:textSize="16sp" 
            />  	

        </TableRow>
  		<TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="Segoe UI Light"
            android:gravity="left"
            android:text="Onderweg"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textSize="14sp" />

  		<TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
             >
  		<Button
  		    android:id="@+id/button10"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:text="@string/Route" 
  		    android:layout_weight="0.5"
  		    android:textSize="12sp"
  		    android:background="@drawable/buttonsstyle"
  		    />
  		<Button
  		    android:id="@+id/button11"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:background="@drawable/buttonsstyle"
  		    android:textSize="12sp"
  		    android:text="@string/Alternatief" 
  		    android:layout_weight="0.5"
     		    />



  			 </TableRow>
    </TableLayout>

</LinearLayout>

</ScrollView>